@@ -1531,7 +1531,7 @@ typedef struct _SYSTEM_SYSTEM_DISK_INFORMATION
 typedef struct _SYSTEM_PROCESSOR_PERFORMANCE_HITCOUNT
 {
     ULONG Hits;
-    CHAR PercentFrequency;
+    UCHAR PercentFrequency;
 } SYSTEM_PROCESSOR_PERFORMANCE_HITCOUNT, *PSYSTEM_PROCESSOR_PERFORMANCE_HITCOUNT;
 
 // private
